# conda-tasks

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
conda_tasks/: __init__.py  cache.py  context.py  exceptions.py  models.py  runner.py
conda_tasks/cli/: add.py  export.py  main.py
conda_tasks/parsers/: __init__.py  condarc.py  pixi_toml.py  pyproject_toml.py  toml.py  yaml.py
docs/: changelog.md  conf.py  configuration.md  features.md  index.md  motivation.md  quickstart.md  robots.txt
docs/_static/css/: custom.css
docs/reference/: api.md  cli.md
docs/reference/api/: context.md  execution.md  models.md  parsers.md
docs/tutorials/: ci-pipeline.md  coming-from-pixi.md  first-project.md  index.md
tests/: conftest.py  test_cache.py  test_context.py  test_graph.py  test_models.py  test_runner.py  test_template.py
tests/cli/: test_add.py  test_export.py  test_list.py  test_parser.py  test_remove.py  test_run.py
tests/parsers/: conftest.py  test_condarc.py  test_detection.py  test_normalize.py  test_pixi_toml.py  test_pyproject_toml.py  test_toml.py  test_yaml.py
