[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-tasks"
description = "Pixi-style task runner plugin for conda."
readme = "README.md"
authors = [{ name = "Jannis Leidel" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dependencies = [
  "conda >=24.7",
  "jinja2 >=3.0",
  "platformdirs >=3.0",
  "pyyaml >=6.0",
  "tomlkit >=0.13",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/jezdez/conda-tasks"

[project.entry-points.conda]
conda-tasks = "conda_tasks.plugin"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=24.7"
jinja2 = ">=3.0"
pyyaml = ">=6.0"
platformdirs = ">=3.0"
tomlkit = ">=0.13"

[tool.pixi.pypi-dependencies]
conda-tasks = { path = ".", editable = true }

[tool.pixi.tasks]
dev = 'python -c "import conda_tasks; print(conda_tasks)"'

[tool.pixi.feature.lint.dependencies]
python = "3.12.*"
pre-commit = "*"
ruff = "*"
ty = ">=0.0.18,<0.0.19"

[tool.pixi.feature.lint.tasks]
lint = "ruff check ."
fmt = "ruff format ."
typecheck = "ty check conda_tasks/ tests/"

[tool.pixi.feature.docs.dependencies]
python = "3.12.*"
conda-sphinx-theme = "*"
linkify-it-py = "*"
myst-parser = "*"
sphinx = "*"
sphinx-argparse = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx-reredirects = "*"
sphinx-sitemap = "*"

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -M dirhtml . _build", cwd = "docs" }
serve = { cmd = "python -m http.server", cwd = "docs/_build/dirhtml" }
clean = { cmd = "rm -rf _build", cwd = "docs" }

[tool.pixi.feature.test.tasks]
test = "python -m pytest"
test-cov = "python -m pytest --cov --cov-report=term-missing --cov-report=html"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.4"
pytest-cov = ">=6.0"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
dev = ["py312"]
lint = ["lint"]
docs = ["docs"]
test-py310 = ["test", "py310"]
test-py311 = ["test", "py311"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]
test-py314 = ["test", "py314"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "conda_tasks/_version.py"

[tool.coverage.run]
source = ["conda_tasks"]
branch = true
parallel = true
omit = ["conda_tasks/_version.py"]

[tool.coverage.report]
exclude_also = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
fail_under = 70
precision = 1
show_missing = true
skip_covered = true
sort = "Miss"

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--strict-markers",
  "--tb=native",
  "-vv",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.analysis]
# conda internals don't ship type stubs for everything
allowed-unresolved-imports = ["conda.**"]

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.analysis]
allowed-unresolved-imports = ["conda.**", "pytest.**"]

[tool.ruff]
target-version = "py310"
exclude = ["conda_tasks/_version.py"]

[tool.ruff.lint]
flake8-type-checking = { exempt-modules = [], strict = true }
select = [
  "E",
  "F",
  "FA",
  "I",
  "ISC",
  "RUF100",
  "T10",
  "TCH",
  "UP",
  "W",
]
